Add content generation
